[Docker] アプリケーションのコンテナ化
サービスの構築・起動：docker-compose up -d
サービスの停止・削除：docker-compose down
コンテナ内アプリケーションにアクセス → ローカルマシンの8080番ポート
コンテナ内DBにアクセス → ローカルマシンの3307番ポート

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 MYSQL_URL=
 MYSQL_USERNAME=
 MYSQL_PASSWORD=
+
+DOCKER_MYSQL_URL=
+DOCKER_MYSQL_DBNAME=
+DOCKER_MYSQL_USERNAME=
+DOCKER_MYSQL_PASSWORD=
+DOCKER_MYSQL_ROOT_PASSWORD=
